--- a/styles/style.css
+++ b/styles/style.css
@@ -43,9 +43,10 @@ button:hover {
     background-color: var(--color-button-hover);
 }
 
-h1 {
+h2 {
     font-family: var(--font-title);
     font-weight: bold;
+    padding: 50px 0px 25px 0px;
 }
 
 nav {
@@ -69,6 +70,33 @@ nav li {
 
 .color-text-grey {
     color: var(--color-text-grey);
+}
+
+.toolbox-item {
+    background-color: var(--white);
+    height: 150px;
+    width: 150px;
+    padding: 0px;
+    margin: 10px;
+}
+
+.toolbox-item:hover {
+    background-color: var(--color-blue);
+    color: var(--white) !important;
+    cursor: pointer;
+}
+
+.toolbox-item p {
+    margin: 0px;
+    padding: 0px;
+}
+
+.toolbox-item i {
+    font-size: 3em;
+}
+
+.toolbox-text-spacer {
+    line-height: 3em;
 }
 
 #home-table {
@@ -108,7 +136,7 @@ nav li {
 #section-about {
     margin: auto;
     max-width: 1000px;
-    padding: 50px 10px;
+    padding: 0px 10px;
     text-align: center;
 }
 
@@ -126,6 +154,25 @@ nav li {
 }
 
 #section-about button {
+}
+
+#section-toolbox {
+    background-color: var(--color-background-grey);
+    padding: 0px 10px;
+    text-align: center;
+}
+
+#section-toolbox .row {
+    margin: auto;
+    max-width: 1000px;
+}
+
+#toolbox-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px auto;
 }
 
 @media (max-width: 310px) {
