--- a/styles/style.css
+++ b/styles/style.css
@@ -22,9 +22,8 @@ a:hover {
     text-decoration: none;
 }
 
-.site-link {
-    border-bottom: 1px solid var(--color-blue);
-    padding-bottom: 2px;
+.badge {
+    opacity: 0.75;
 }
 
 body {
@@ -69,6 +68,37 @@ nav li {
     padding: 10px;
 }
 
+.btn-alt {
+    background-color: var(--white);
+    border: 1px solid var(--color-border-grey);
+    color: var(--color-text-dark);
+}
+
+.btn-alt:hover {
+    background-color: var(--white);
+    border: 1px solid var(--color-blue);
+    color: var(--color-blue);
+}
+
+.card {
+    margin: 0px 10px 50px 10px;
+    width: 350px;
+}
+
+.card img {
+    opacity: 0.75;
+    padding: 10px;
+}
+
+.card-body {
+    padding: 10px 20px;
+}
+
+.card-title {
+    font-family: var(--font-title);
+    font-weight: bold;
+}
+
 .color-text-grey {
     color: var(--color-text-grey);
 }
@@ -79,6 +109,28 @@ nav li {
 
 .font-family-text {
     font-family: var(--font-text);
+}
+
+.portfolio-dual-buttons {
+    margin: 0px;
+    padding: 0px;
+}
+
+.portfolio-dual-buttons div {
+    padding: 0px;
+}
+
+.portfolio-dual-buttons button {
+    margin: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
+    width: 90%;
+}
+
+.site-link {
+    border-bottom: 1px solid var(--color-blue);
+    padding-bottom: 2px;
 }
 
 .text-emoji {
@@ -182,7 +234,6 @@ nav li {
 
 #section-toolbox {
     background-color: var(--color-background-grey);
-    padding-bottom: 25px;
     text-align: center;
 }
 
@@ -205,9 +256,6 @@ nav li {
     text-align: center;
 }
 
-
-
-
 #portfolio-items-container {
     align-items: stretch;
     display: flex;
@@ -219,56 +267,24 @@ nav li {
     padding: 25px 0px;
 }
 
-.card {
-    margin: 0px 10px 50px 10px;
-    width: 350px;
-}
-
-.card img {
-    opacity: 0.75;
-    padding: 10px;
-}
-
-.card-body {
-    padding: 10px 20px;
-}
-
-.card-title {
-    font-family: var(--font-title);
-    font-weight: bold;
-}
-
-.badge {
-    opacity: 0.75;
-}
-
-.portfolio-dual-buttons {
-    margin: 0px;
-    padding: 0px;
-}
-
-.portfolio-dual-buttons div {
-    padding: 0px;
-}
-
-.portfolio-dual-buttons button {
-    margin: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
+#section-contact {
     text-align: center;
-    width: 90%;
 }
 
-.btn-alt {
-    background-color: var(--white);
-    border: 1px solid var(--color-border-grey);
-    color: var(--color-text-dark);
+#contact-icons-container {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 25px auto;
+    max-width: 300px;
 }
 
-.btn-alt:hover {
-    background-color: var(--white);
-    border: 1px solid var(--color-blue);
-    color: var(--color-blue);
+#section-contact i {
+    font-size: 3em;
+    margin: 10px 20px;
 }
 
 @media (max-width: 310px) {
