--- a/styles/style.css
+++ b/styles/style.css
@@ -69,14 +69,6 @@ nav li {
     padding: 0px 10px;
 }
 
-#back-to-top-button {
-    bottom: 20px;
-    display: none;
-    position: fixed;
-    right: 30px;
-    z-index: 99;
-}
-
 .badge {
     opacity: 0.75;
 }
@@ -222,18 +214,18 @@ nav li {
     padding: 50px;
 }
 
-#home-name p {
+#home-name h1, #home-name p {
     color: var(--white);
     margin: 0px auto;
     max-width: 1000px;
     padding: 0px;
 }
 
-#home-name p:nth-child(1) {
+#home-name p {
     font-size: 2em;
 }
 
-#home-name p:nth-child(2) {
+#home-name p {
     font-size: 3em;
 }
 
@@ -311,6 +303,14 @@ nav li {
 #section-social i {
     font-size: 3em;
     margin: 10px 20px;
+}
+
+#back-to-top-button {
+    bottom: 20px;
+    display: none;
+    position: fixed;
+    right: 30px;
+    z-index: 99;
 }
 
 @media (max-width: 310px) {
