Add Google Analytics tracking code
- Begin resize text settings, but leave commented out for time being

--- a/styles/style.css
+++ b/styles/style.css
@@ -333,6 +333,12 @@ nav li {
     z-index: 99;
 }
 
+/* #change-font-size i {
+    cursor: pointer;
+    font-size: 2em;
+    margin: 5px 10px;
+} */
+
 @media (max-width: 310px) {
     #home-name {
         padding: 0px;
