--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
     --color-button: #3F46AD;
     --color-button-hover: var(--color-blue);
     --color-grey: #6D6F7B;
+	--color-learning-background: #05DAFF;
     --color-link: var(--color-blue);
     --color-red: #DC3545;
     --color-text-dark: #323648;
@@ -223,6 +224,11 @@ nav li {
 
 .toolbox-item i {
     font-size: calc(var(--font-size)*3);
+}
+
+.toolbox-item-learning:hover {
+	background-color: var(--color-bootstrap-a11y-success);
+    cursor: pointer;
 }
 
 .toolbox-text-spacer {
